feat: add endpoint eventparticipant
